--- a/client/index.html
+++ b/client/index.html
@@ -3,77 +3,62 @@
 {% block article_body %}
 {% markdown %}
 
-...the defense of the English language implies more than this, and perhaps it is best to start by saying what it does _not_ imply.
+
 
 <figure class="graphic graphic-b-1 graphic-pad-1">
-  <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2Fc4bf0be4-7c15-11e4-a7b8-00144feabdc0?source=ig&fit=scale-down&width=700"></img>
-    <figcaption class="o-typography-caption">
-    <a class="o-typography-link" href="#void">&#xA9;Credit person</a> George Orwell at his typewriter
-  </figcaption>
+  <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2F407b7a38-aa90-11e6-ba7d-76378e4fef24?source=ig&fit=scale-down&width=700"></img>
+    <figcaption class="o-typography-caption">Reince Priebus, Donald Trump, Mike Pence and Stephen Bannon</figcaption>
 </figure>
 
-To begin with it has nothing to do with archaism, with the salvaging of
-obsolete words and turns of speech, or with the setting up of a "standard
-English" which must never be departed from. On the contrary, it is
-especially concerned with the scrapping of every word or idiom which has
-outworn its usefulness. It has nothing to do with correct grammar and syntax,
-which are of no importance so long as one makes one's meaning clear, or with
-the avoidance of Americanisms, or with having what is called a "good prose
-style." On the other hand, it is not concerned with fake simplicity and
-the attempt to make written English colloquial. Nor does it even imply in every
-case preferring the Saxon word to the Latin one, though it does imply using the fewest and shortest words that will cover one's meaning. What is above all
-needed is to let the meaning choose the word, and not the other way around. In prose, the worst thing one can do with words is surrender to them. When you think of a concrete object, you think wordlessly, and then, if you want to
-describe the thing you have been visualizing you probably hunt about until you
-find the exact words that seem to fit it. When you think of something abstract
-you are more inclined to use words from the start, and unless you make a
-conscious effort to prevent it, the existing dialect will come rushing in and
-do the job for you, at the expense of blurring or even changing your meaning.
-Probably it is better to put off using words as long as possible and get one's
-meaning as clear as one can through pictures and sensations. Afterward one can choose -- not simply _accept_ -- the phrases that will best cover the
-meaning, and then switch round and decide what impressions one's words are
-likely to make on another person. This last effort of the mind cuts out all
-stale or mixed images, all prefabricated phrases, needless repetitions, and
-humbug and vagueness generally. But one can often be in doubt about the effect of a word or a phrase, and one needs rules that one
-can rely on when instinct fails. I think the following rules will cover most cases:
+<p><a href="https://www.ft.com/topics/people/Donald_Trump" data-trackable="link">Donald Trump</a> has begun&nbsp;<a href="/content/c9edec6a-aa81-11e6-9cb3-bb8207902122" data-trackable="link">putting together</a> his transition team and naming the cabinet members who will come to power in Washington after the inauguration on January 20. Follow the FT’s guide to the main players he has already picked — and the positions yet to be filled — here.</p>
 
-1. Never use a metaphor, simile, or other figure of speech which you are used to seeing in print.
-2. Never use a long word where a short one will do.
-3. If it is possible to cut a word out, always cut it out.
-4. Never use the passive where you can use the active.
-5. Never use a foreign phrase, a scientific word, or a jargon word if you can think of an everyday English equivalent.
-6. Break any of these rules sooner than say anything outright barbarous.
+<!-- repeating card section starts -->
+<div class="cardthing" style="background-color:#fff; margin-bottom:10px; padding:10px;">
+	<h1 style="margin-bottom:0;">Vice-president</h1>
+	<h2 style="margin-top:0"><a href="https://www.ft.com/topics/people/Mike_Pence">Mike Pence</a> [+ FOLLOW]</h2>
+	<figure class="graphic graphic-b-1 graphic-pad-1">
+	  <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2F230807d6-abf9-11e6-ba7d-76378e4fef24?source=ig&fit=scale-down&width=700"></img>
+	    <figcaption class="o-typography-caption">&#xA9;AFP</figcaption>
+	</figure>
+	<p>Mike Pence, the Indiana governor and former congressman, was picked as Donald Trump’s running mate for having what the property tycoon lacked: experience of governing and knowledge of Washington. After his victory Mr Trump asked Mr Pence, a Washington insider, to head the transition team filling hundreds of posts in the White House and elsewhere, offering hope to lawmakers and lobbyists eager to see familiar faces in power.</p>
+	<p>It is a turnround for Mr Pence to be embraced as a force of moderation. He was a rigid social conservative during a decade in Congress and sparked a furore in 2015 for pushing a law that backed religious freedom in Indiana at the expense of gay rights.</p>
+	<h3>More on Mike Pence:</h3>
+	<ul>
+		<li><a href="">Trump faces fight over new ‘war on terror’</a> DATE</li>
+		<li><a href="">Trump says retired general Mattis in running for Pentagon</a> DATE</li>
+		<li><a href="">Trump demands apology from ‘Hamilton’ cast</a> DATE</li>
+	</ul>
+</div>
 
-These rules sound elementary, and so they are, but they demand a deep change
-of attitude in anyone who has grown used to writing in the style now
-fashionable. One could keep all of them and still write bad English, but one
-could not write the kind of stuff that I quoted in those five specimens at the
-beginning of this article.
+<div class="cardthing" style="background-color:#fff; margin-bottom:10px; padding:10px;">
+	<h1 style="margin-bottom:0;">White House chief of staff</h1>
+	<h2 style="margin-top:0"><a href="https://www.ft.com/stream/peopleId/YmQ2M2MwOTMtYjdlYi00NjI5LWExMTMtMzUwNDVkMGYyODk1-UE4=">Reince Priebus</a> [+ FOLLOW]</h2>
+	<figure class="graphic graphic-b-1 graphic-pad-1">
+	  <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2F9d22a59a-a9f0-11e6-a0bb-97f42551dbf4?source=ig&fit=scale-down&width=700"></img>
+	    <figcaption class="o-typography-caption"><!--&#xA9;AFP--></figcaption>
+	</figure>
+	<p>A Wisconsin-raised lawyer who has never held elected office, Mr Priebus has run the Republican National Committee for a record six years. He has been credited with improving the party’s financial position and investing in the kind of data operations that President Barack Obama used to beat John McCain and Mitt Romney in their 2008 and 2012 election races.</p><p>The appointment of Mr Priebus catapults him to one of the most powerful positions in Washington. But he will have to share his place near the top of the power pyramid with Stephen Bannon.</p>
+	<h3>More on Reince Priebus:</h3>
+	<ul>
+		<li><a href="">Trump says retired general Mattis in running for Pentagon</a> DATE</li>
+		<li><a href="">Trump’s picks: how the new administration is taking shape</a> DATE</li>
+		<li><a href="">Mike Pence arrives at the threshold of power</a> DATE</li>
+	</ul>
+</div>
+<!-- repeating card section starts -->
 
-<figure class="graphic graphic-b-1 graphic-pad-1">
-  <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2Fc4bf0be4-7c15-11e4-a7b8-00144feabdc0?source=ig&fit=scale-down&width=700"></img>
-    <figcaption class="o-typography-caption">
-    <a class="o-typography-link" href="#void">&#xA9;Credit person</a> George Orwell at his typewriter
-  </figcaption>
-</figure>
 
-I have not here been considering the literary use of language, but merely
-language as an instrument for expressing and not for concealing or preventing
-thought. Stuart Chase and others have come near to claiming that all abstract
-words are meaningless, and have used this as a pretext for advocating a kind of
-political quietism. Since you don't know what Fascism is, how can you struggle
-against Fascism? One need not swallow such absurdities as this, but one ought
-to recognize that the present political chaos is connected with the decay of
-language, and that one can probably bring about some improvement by starting at
-the verbal end. If you simplify your English, you are freed from the worst
-follies of orthodoxy. You cannot speak any of the necessary dialects, and when
-you make a stupid remark its stupidity will be obvious, even to yourself.
-Political language -- and with variations this is true of all political
-parties, from Conservatives to Anarchists -- is designed to make lies sound
-truthful and murder respectable, and to give an appearance of solidity to pure
-wind. One cannot change this all in a moment, but one can at least change one's
-own habits, and from time to time one can even, if one jeers loudly enough,
-send some worn-out and useless phrase -- some _jackboot, Achilles' heel,
-hotbed, melting pot, acid test, veritable inferno_, or other lump of verbal
-refuse -- into the dustbin, where it belongs.
+<h1>Positions that have yet to be filled</h1>
+
+<!-- Repeating empty cards start -->
+<div class="cardthing" style="background-color:#fff; margin-bottom:10px; padding:10px;">
+	<h1 style="margin-bottom:0;">Secretary&nbsp;of State</h1>
+</div>
+
+<div class="cardthing" style="background-color:#fff; margin-bottom:10px; padding:10px;">
+	<h1 style="margin-bottom:0;">Secretary&nbsp;of the Treasury</h1>
+</div>
+<!-- Repeating empty cards end -->
+
 {% endmarkdown %}
 {% endblock %}
