Copy and config changes

--- a/client/index.html
+++ b/client/index.html
@@ -4,11 +4,15 @@
 {% block article_body %}
 
 <figure class="graphic graphic-b-1 graphic-pad-1">
-  <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2F407b7a38-aa90-11e6-ba7d-76378e4fef24?source=ig&fit=scale-down&width=700"></img>
-    <figcaption class="o-typography-caption">Reince Priebus, Donald Trump, Mike Pence and Stephen Bannon</figcaption>
+  <img alt="" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2F867b4c1e-b627-11e6-961e-a1acd97f622d?source=next&fit=scale-down&width=700"></img>
+    <figcaption class="o-typography-caption"></figcaption>
 </figure>
 
-<p><a href="https://www.ft.com/topics/people/Donald_Trump" data-trackable="link">Donald Trump</a> has begun&nbsp;<a href="/content/c9edec6a-aa81-11e6-9cb3-bb8207902122" data-trackable="link">putting together</a> his transition team and naming the cabinet members who will come to power in Washington after the inauguration on January 20. Follow the FT’s guide to the main players he has already picked — and the positions yet to be filled — here.</p>
+<p><a href="https://www.ft.com/topics/people/Donald_Trump" data-trackable="link">Donald Trump</a> has selected many of the cabinet members and White House officials who will come to power in Washington after the inauguration on January 20.
+
+<p>This FT’s guide shows the individuals he has already picked — and the positions yet to be filled.</p>
+
+<p>Click the &ldquo;Follow&rdquo; buttons to add the nominee to <a href="https://www.ft.com/myft/following/">MyFT</a> and recieve alerts about their confirmation process.</p>
 
 {# repeating card section starts #}
 {% for item in cards.selected %}
