Remove hero image
per Robert’s request.

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,10 @@
 
 {% block article_body %}
 
-<figure class="graphic graphic-b-1 graphic-pad-1">
+<!-- <figure class="graphic graphic-b-1 graphic-pad-1">
   <img alt="" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2F867b4c1e-b627-11e6-961e-a1acd97f622d?source=next&fit=scale-down&width=700"></img>
     <figcaption class="o-typography-caption"></figcaption>
-</figure>
+</figure>-->
 
 <p><a href="https://www.ft.com/topics/people/Donald_Trump" data-trackable="link">Donald Trump</a> has selected many of the cabinet members and White House officials who will come to power in Washington after the inauguration on January 20.
 
