Copy change for Edge

--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
 
 <p><a href="https://www.ft.com/topics/people/Donald_Trump" data-trackable="link">Donald Trump</a> has selected many of the cabinet members and White House officials who will come to power in Washington after the inauguration on January 20.
 
-<p>This FT’s guide shows the individuals he has already picked — and the positions yet to be filled.</p>
+<p>This is the FT’s guide to the people he has picked for the key roles.</p>
 
 <p>Click the &ldquo;Follow&rdquo; buttons to add the nominee to <a href="https://www.ft.com/myft/following/">MyFT</a> and recieve alerts about their confirmation process.</p>
 
