--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 
 <p>This is the FT’s guide to the people he has picked for the key roles.</p>
 
-<p>Click the &ldquo;Follow&rdquo; buttons to add the nominee to <a href="https://www.ft.com/myft/following/">MyFT</a> and recieve alerts about their confirmation process.</p>
+<p>Click the &ldquo;Follow&rdquo; buttons to add the nominee to <a href="https://www.ft.com/myft/following/">MyFT</a> and receive alerts about their confirmation process.</p>
 
 {# repeating card section starts #}
 {% for item in cards.selected %}
